--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<style>
+			body {
+				margin: 0;
+				padding: 0;
+			}
+		</style>
 		%svelte.head%
 	</head>
 	<body>
